# xspex

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  fdvjp.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  tests.yml
helpers/: identify_xspec.py  template.py
src/: build_helper.py  libxspex.cpp  worker.cpp
src/include/: config.hpp  constant.hpp  interface.hpp  mdef.hpp  multiprocessing.hpp  shmem.hpp  utils.hpp  worker.hpp  wrapper.hpp  xspec.hpp  xspec_dbversion.hpp  xspex.hpp
src/xspex/: __init__.py  _fdjvp.py  _model.py  _version.py  primitive.py
src/xspex/_xspec/: __init__.py  model_parser.py  types.py
template/: __init__.py  xspex.cpp
tests/: conftest.py  test_basic.py  test_batch.py  test_config.py  test_eval.py  test_fdjvp.py  test_jvp.py  test_primitive.py
