[metadata]
name = xspex
license = GNU GPL v3
author = Wang-Chen Xue
author_email = wcxuemail@gmail.com
description = Access Xspec models and corresponding JAX/XLA ops.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wcxve/xspex
platforms = Linux, Mac OS X
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: C
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
install_requires =
    numpy
    jax>=0.4.16
    jaxlib>=0.4.16

packages = find:
package_dir =
    =src

include_package_data = True

[options.packages.find]
where=src
